BXC-5478 update tests for content type column